--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,24 @@
 {
-  "require" : {
-    "silex/silex": "^1.3",
-    "monolog/monolog": "^1.4",
-    "twig/twig": "^1.8",
-    "symfony/twig-bridge": "^2"
+  "license": "Apache License, Version 2.0",
+  "authors": [
+    {
+      "name": "moznion",
+      "email": "moznion@gmail.com"
+    },
+    {
+      "name": "Satoru Yoshihara",
+      "email": "vaduz0@gmail.com"
+    }
+  ],
+  "require": {
+    "php": ">=5.6",
+    "slim/slim": "^3.5.0",
+    "monolog/monolog": "^1.21.0",
+    "linecorp/line-bot-sdk": "1.1.0"
   },
-  "require-dev": {
-    "heroku/heroku-buildpack-php": "*"
+  "autoload": {
+    "psr-4": {
+      "LINE\\": "src/"
+    }
   }
 }
